of the parser splits on whitespace with commas considered equivalent
to whitespace.  All tests pass.
----------------------------------------------------------------------
Thu Aug 11 16:37:58 2011                        Michael Jennings (mej)

Per discussion with Greg, this version of the parser requires a comma
between items in a list.  Whitespace surrounding the comma is ignored,
but embedded whitespace within a value is significant.  This maintains
consistency between quoting requirements for keys and values but will
require some existing configuration files to be modified.

The test config file has been modified so that all unit tests pass
again.
----------------------------------------------------------------------
Fri Aug 12 13:23:01 2011                        Michael Jennings (mej)

Remove bogus Warewulf.pm.

Remove Debug.pm and add its contents to Util.pm instead.  Fix
script/module dependencies accordingly.

Update examine_object() from upstream (Mezzanine) to improve handling
of objects.
----------------------------------------------------------------------
Fri Aug 12 16:56:56 2011                        Michael Jennings (mej)

Renamed Include.pm to ACVars.pm to be more descriptive of what its
purpose actually is.

Refactored ACVars.pm to be object-oriented using a singleton pattern.
The singleton is accessible by invoking functions on the module,
calling static methods of the class, or invoking methods on an object
instance.  More details and examples are in the POD in the module.

Bumped version to 3.0.99.0 since it's undergone some significant
changes (and breakage).
----------------------------------------------------------------------
Fri Aug 12 18:05:48 2011                        Michael Jennings (mej)

Fix bug in populating objects from a hashref.  This was causing
configuration data to be retrievable only in array form.
----------------------------------------------------------------------